Remplazo de iconos redes sociales por sprites

--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
 				<ul>
 					<li>
 						<a href="http://linkedin.com/in/stanlyjavier/" target="_BLANK">
-							<img src="images/icons/linked-in.png" alt="Linkedin Stanly Javier">
+							<div class="icons linkedin"></div>
 						</a>
 					</li>
 					<li>
 						<a href="https://www.twitter.com/stanly_javier" target="_BLANK">
-							<img src="images/icons/twitter.png" alt="Twitter Stanly Javier">
+							<div class="icons twitter"></div>
 						</a>
 					</li>
 					<li>
 						<a href="https://www.behance.net/" target="_BLANK">
-							<img src="images/icons/behance.png" alt="Behance Portfolio Stanly Javier">
+							<div class="icons behance"></div>
 						</a>
 					</li>
 					<li>
 						<a href="https://www.dribbble.com/stanlyjavier" target="_BLANK">
-							<img src="images/icons/dribbble.png" alt="Dribbble Stanly Javier">
+							<div class="icons dribbble"></div>
 						</a>
 					</li>
 					<li>
 						<a href="https://www.vimeo.com/stanlyjavier" target="_BLANK">
-							<img src="images/icons/vimeo.png" alt="Vimeo Stanly Javier">
+							<div class="icons vimeo"></div>
 						</a>
 					</li>
 				</ul>
