--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Stanly Javier</title>
 
-	<link rel="icon" type="image/png" href="images/icons/favicon-16x16.png" sizes="16x16">
-	<link rel="icon" type="image/png" href="images/icons/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
